--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p style="text-align: center;">Apart from being a java developer, in free time i like read books and articules about programming also learn new technologesssssss. I follow a n umber of sci-fi and fantasy genre movies and television shows. During the warmer months, 
+          <p style="text-align: center;">Apart from being a java developer, in free time i like read books and articules about programming also learn new technologes. I follow a n umber of sci-fi and fantasy genre movies and television shows. During the warmer months, 
             <br>I enjoy mountain biking, jogging and riding on motorcycle.</p>
         </div>
       </section>
