--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Paweł
+          <h1 class="mb-0" style="200px !important;">Paweł
             <span class="text-info">Łukaszewski</span>
           </h1>
           <div class="subheading mb-5">Domaniewska Street · Warsaw · 123-456-789 ·
             <a class="text-info">pawel.t.lukaszewski@email.com</a>
           </div>
-          <p class="mb-5" style="text-align: justify;"></a>I am determined person, constantly and consistently strive for determined goals with hard work, thats why I efficiently realize any tasks. I like learn new technologes and absorb knowledge. I like work in team and i am multitasking person.</p>
+          <p class="mb-5" style="text-align: justify;  padding-right: 16px;">I am determined person, constantly and consistently strive for determined goals with hard work, thats why I efficiently realize any tasks. I like learn new technologes and absorb knowledge. I like work in team and i am multitasking person.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/">
-                <span id="dupcia" class="fa-stack fa-lg">
+                <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                 </span>
@@ -101,7 +101,7 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
+        <div class="my-auto" style=" margin-right: -5px !important;">
           <h2 class="mb-5">Experience</h2>
 
          
