--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0" style="200px !important;">Paweł
-            <span class="text-info">Łukaszewski</span>
+          <h1 class="mb-0">Paweł
+            <span class="text-info" style="margin-right: 15px !important;">Łukaszewski</span>
           </h1>
           <div class="subheading mb-5">Domaniewska Street · Warsaw · 123-456-789 ·
             <a class="text-info">pawel.t.lukaszewski@email.com</a>
