--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
 
-          <h3 class="mb-0">Pawel
+          <h3 class="mb-0">Paaawel
             <span class="text-primary">Lukaszewski</span>
           </h3>
 
