--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="subheading mb-5">Domaniewska Street · Warsaw · 123-456-789 ·
             <a class="text-info">pawel.t.lukaszewski@email.com</a>
           </div>
-          <p class="mb-5" >I am determined person, constantly and consistently strive for determined goals with hard work, thats why I efficiently realize any tasks. I like learn new technologes and absorb knowledge. I like work in team and i am multitasking person.</p>
+          <p class="mb-5" style"text-align:justify;">I am determined person, constantly and consistently strive for determined goals with hard work, thats why I efficiently realize any tasks. I like learn new technologes and absorb knowledge. I like work in team and i am multitasking person.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/">
@@ -226,8 +226,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p style="text-align: justify;">Apart from being a java developer, in free time i like read books and articules about programming also learn new technologes. I follow a n umber of sci-fi and fantasy genre movies and television shows. During the warmer months, 
-            <br>I enjoy mountain biking, jogging and riding on motorcycle.</p>
+          <p style"text-align:justify;">Apart from being a java developer, in free time i like read books and articules about programming also learn new technologes. I follow a n umber of sci-fi and fantasy genre movies and television shows. During the warmer months, I enjoy mountain biking, jogging and riding on motorcycle.</p>
         </div>
       </section>
 
